apps/boten-anna/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boten-anna
  namespace: boten-anna
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: security-tinyauth-protect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Boten Anna"
    gethomepage.dev/description: "Bot de trading crypto (Freqtrade)"
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "freqtrade.png"
    gethomepage.dev/href: "https://ba.valab.top"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ba.valab.top
      secretName: boten-anna-tls
  rules:
    - host: ba.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: boten-anna
                port:
                  number: 80
